fixed new rent margin on mobile

--- a/src/components/NewRent/newRent.scss
+++ b/src/components/NewRent/newRent.scss
@@ -4,7 +4,10 @@
   @extend .card;
   margin-bottom: 6em;
   max-width: 30em;
-  margin: auto;
+
+  @media (min-width: 768px) {
+    margin: auto;
+  }
 }
 
 .rentalForm {
